--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
     <div class="container-fluid" id="proj_cont">
       
       <div class="row">
-        <blockquote class="proj col-md-6 col-lg-3" id="globe">
+        <blockquote class="proj col-md-6 col-lg-3" id="globe" >
           <div class="quote">
-            <span class="intro"><a href="http://yulinyang.me/GTA_Globe/" target="_blank">3D Infographic of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)</a></span>
+            <span class="intro"><a href="projects/globe.html" target="_blank">3D Infographic of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)</a></span>
             <span class="more">  I built a 3D interactive globe showcasing the frequency of documented terrorist attacks on the Global Terrorism Database in 2012, 2013, and 2014 using WebGL Globe.<p> More information can be found <a href="https://github.com/yyang0087/GTA_Globe" target="_blank">here.</a></p></span>
             <span class="project"></span>
           </div>
