--- a/projects/globe.html
+++ b/projects/globe.html
@@ -73,7 +73,7 @@
 
                     <!--<h2 class="section-heading">The Final Frontier</h2> -->
                     <div class="ret_But col-md-12 text-center">
-                      <button type="button" class="btn btn-primary" href="#" onclick="history.back();">Return to homepage</button>
+                      <a type="button" class="btn btn-primary btn-lg" href="../index.html">Return to homepage</a>
                     </div>
                     
 
