--- a/index.html
+++ b/index.html
@@ -142,21 +142,67 @@
 
   <div class="page" id="projects">
     <div id="h2Title"><h2>PROJECTS</h2></div>
-    <div class="container-fluid" id="proj_cont">
+    <div class="container" id="proj_cont">
       
-      <div class="row">
-        <blockquote class="proj col-md-6 col-lg-3" id="globe" >
-          <div class="quote">
-            <span class="intro"><a href="projects/globe.html" target="_blank">3D Infographic of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)</a></span>
-            <span class="more">  I built a 3D interactive globe showcasing the frequency of documented terrorist attacks on the Global Terrorism Database in 2012, 2013, and 2014 using WebGL Globe.<p> More information can be found <a href="https://github.com/yyang0087/GTA_Globe" target="_blank">here.</a></p></span>
+      <div class="row" id="proj_row">
+
+          <div class="proj col-md-6 col-lg-4">
+            <img class="globe" src="resources/globe.jpg" alt="Avatar">
+            <div class="middle">
+                <div class="midtext">
+                  <a href="projects/globe.html" target="_blank">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                </div>
+              </div>
             <span class="project"></span>
           </div>
-        </blockquote>
+
+
+
+          <div class="proj col-md-6 col-lg-4">
+            <img class="globe" src="resources/globe.jpg" alt="Avatar">
+            <div class="middle">
+                <div class="midtext">
+                  <a href="projects/globe.html" target="_blank">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                </div>
+              </div>
+            <span class="project"></span>
+          </div>
+
+
+          <div class="proj col-md-6 col-lg-4">
+            <img class="globe" src="resources/globe.jpg" alt="Avatar">
+            <div class="middle">
+                <div class="midtext">
+                  <a href="projects/globe.html" target="_blank">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                </div>
+              </div>
+            <span class="project"></span>
+          </div>
+
+          <div class="proj col-md-6 col-lg-4">
+            <img class="globe" src="resources/globe.jpg" alt="Avatar">
+            <div class="middle">
+                <div class="midtext">
+                  <a href="projects/globe.html" target="_blank">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                </div>
+              </div>
+            <span class="project"></span>
+          </div>
+
+
+
+
+
+
+
+
+<!--
 
         <blockquote class="proj col-md-6 col-lg-3" id="ticketbuddy">
           <div class="quote">
             <span class="intro">UW-Madison TicketBuddy <br>(2016, iOS, Swift, Xcode, Firebase, Node.js)</span>
-            <span class="more">At UW Madison, there are many people trying to buy/sell football tickets the day before/of the game and trying to communicate over other forms of social media such as Facebook and Snapchat. Many of the buyers/sellers have trouble communicating with other buyers/sellers. This app attempts to streamline that process of finding matches and efficiently completing transactions. I used Swift in Xcode to build the foundation of the app. I implemented Firebase to have a database to store the login data. I instantiated a local Node.js server to store the posting data for each game.<p> More information can be found <a href="https://github.com/yyang0087/TicketBuddy" target="_blank">here.</a></p></span>
+            <span class="more">At UW Madison, there are many people trying to buy/sell football tickets the day before/of the game and trying to communicate over other forms of social media such as Facebook and Snapchat. Many of the buyers/sellers have trouble communicating with other buyers/sellers. This app attempts to streamline that process of finding matches and efficiently completing transactions. I used Swift in Xcode to build the foundation of the app. I implemented Firebase to have a database to store the login data. I instantiated a local Node.js server to store the posting data for each game.<p> More information can be found <a href="https://github.com/yyang0087/TicketBuddy" target="_blank">here.</a></p>
+            </span>
             <span class="project"></span>
           </div>
         </blockquote>
@@ -178,7 +224,7 @@
         </blockquote>
 
 
-
+-->
 
       </div>
     </div><!-- container -->
