project picture update

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <img class="globe" src="resources/globe.jpg" alt="Avatar">
             <div class="middle">
                 <div class="midtext">
-                  <a href="projects/globe.html" target="_blank">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                  <a href="projects/globe.html">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
                 </div>
               </div>
             <span class="project"></span>
@@ -159,10 +159,10 @@
 
 
           <div class="proj col-md-6 col-lg-4">
-            <img class="globe" src="resources/globe.jpg" alt="Avatar">
+            <img class="globe" src="resources/pocketnote.jpg" alt="Avatar">
             <div class="middle">
                 <div class="midtext">
-                  <a href="projects/globe.html" target="_blank">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                  <a href="projects/globe.html">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
                 </div>
               </div>
             <span class="project"></span>
@@ -170,20 +170,20 @@
 
 
           <div class="proj col-md-6 col-lg-4">
-            <img class="globe" src="resources/globe.jpg" alt="Avatar">
+            <img class="globe" src="resources/ticketbuddy.jpg" alt="Avatar">
             <div class="middle">
                 <div class="midtext">
-                  <a href="projects/globe.html" target="_blank">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                  <a href="projects/globe.html">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
                 </div>
               </div>
             <span class="project"></span>
           </div>
 
           <div class="proj col-md-6 col-lg-4">
-            <img class="globe" src="resources/globe.jpg" alt="Avatar">
+            <img class="globe" src="resources/sweeper.jpg" alt="Avatar">
             <div class="middle">
                 <div class="midtext">
-                  <a href="projects/globe.html" target="_blank">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                  <a href="projects/globe.html">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
                 </div>
               </div>
             <span class="project"></span>
