--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <img class="globe" src="resources/pocketnote.jpg" alt="Avatar">
             <div class="middle">
                 <div class="midtext">
-                  <a href="projects/pockenote.html">4D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                  <a href="projects/pocketnote.html">4D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
                 </div>
               </div>
             <span class="project"></span>
