--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <img class="globe" src="resources/pocketnote.jpg" alt="Avatar">
             <div class="middle">
                 <div class="midtext">
-                  <a href="projects/pocketnote.html">4D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                  <a href="projects/pocketnote.html">PocketNote</a>
                 </div>
               </div>
             <span class="project"></span>
@@ -173,7 +173,7 @@
             <img class="globe" src="resources/ticketbuddy.jpg" alt="Avatar">
             <div class="middle">
                 <div class="midtext">
-                  <a href="projects/ticketbuddy.html">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
+                  <a href="projects/ticketbuddy.html">TicketBuddy</a>
                 </div>
               </div>
             <span class="project"></span>
@@ -183,8 +183,7 @@
             <img class="globe" src="resources/sweeper.jpg" alt="Avatar">
             <div class="middle">
                 <div class="midtext">
-                  <a href="projects/sweeper.html">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
-                </div>
+                  <a href="projects/sweeper.html">Sweeper</a>
               </div>
             <span class="project"></span>
           </div>
