--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <div class="page" id="projects">
     <div id="h2Title"><h2>PROJECTS</h2></div>
-    <div id="h2Title"><h3>This section is under construction.</h3></div>
+    <div id="h3Title"><h3>This section is currently under construction.</h3></div>
     <div class="container" id="proj_cont">
       
       <div class="row" id="proj_row">
