--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
     <ol class="carousel-indicators">
     </ol>
 
-    <div class="carousel-inner fullheight">
-            <div class="item active"><img src="resources/1.jpg" alt="Lifestyle Photo"></div>
-            <div class="item"><img src="resources/2.jpg" alt="Vaccinations"></div>
-            <div class="item"><img src="resources/3.jpg" alt="Fish"></div>
-            <div class="item"><img src="resources/4.jpg" alt="Exotic Animals"></div>     
-            <div class="item"><img src="resources/5.jpg" alt="Exotic Animals"></div>
-            <div class="item"><img src="resources/6.jpg" alt="Exotic Animals"></div>  
-            <div class="item"><img src="resources/7.jpg" alt="Exotic Animals"></div>              
+    <div class="carousel-inner fullheight" data-interval="20000">
+            <div class="item active"><img src="resources/1.jpg"></div>
+            <div class="item"><img src="resources/2.jpg"></div>
+            <div class="item"><img src="resources/3.jpg"></div>
+            <div class="item"><img src="resources/4.jpg"></div>     
+            <div class="item"><img src="resources/5.jpg"></div>
+            <div class="item"><img src="resources/6.jpg"></div>  
+            <div class="item"><img src="resources/7.jpg"></div>              
     </div><!-- carousel-inner -->
 
 
@@ -131,7 +131,7 @@
               <p>If you have an idea for something amazing, crazy, or straight up impossible and need an extra hand, hit me up and I'm more than eager to explore the unknown with you.
               </p><br>
               <p><em>You can find my resume <a href="resources/Yu-Lin_Yang_Resume_2017.pdf" target="_blank">here.</a></em>
-        </div> <!-- doctor -->
+        </div> 
 
 
       </div><!-- outer row -->
@@ -144,12 +144,69 @@
   <div class="page" id="projects">
     <div id="h2Title"><h2>PROJECTS</h2></div>
     <div id="h3Title"><h3>This section is currently under construction.</h3></div>
+
+    <div class="album text-muted">
+      <div class="container">
+
+        <div class="row">
+          <div class="card">
+            <a href="https://facebook.com/triplexlink" target="_blank">
+              <img data-src="holder.js/100px280/thumb" src="resources/globe.png" alt="Card image cap">
+            </a>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card">
+            <img data-src="holder.js/100px280/thumb" src="resources/globe.png" alt="Card image cap">
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card">
+            <img data-src="holder.js/100px280/thumb" src="resources/globe.png" alt="Card image cap">
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+
+          <div class="card">
+            <img src="resources/globe.png" alt="Card image cap">
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card">
+            <img src="resources/globe.png" alt="Card image cap">
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card">
+            <img src="resources/globe.png" alt="Card image cap">
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+
+          <div class="card">
+            <img src="resources/globe.png" alt="Card image cap">
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card">
+            <img src="resources/globe.png" alt="Card image cap">
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card">
+            <img src="resources/globe.png" alt="Card image cap">
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+
+
+
+
+
+
     <div class="container" id="proj_cont">
       
       <div class="row" id="proj_row">
 
           <div class="proj col-md-6 col-lg-4">
-            <img class="globe" src="resources/globe.jpg" alt="Avatar">
+            <img class="globe" src="resources/globe.png" alt="Avatar">
             <div class="middle">
                 <div class="midtext">
                   <a href="projects/globe.html">3D Infographic</a> of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)
@@ -230,7 +287,7 @@
       </div>
     </div><!-- container -->
   </div><!-- testimonials page -->
-  <div id="h3Title"><h3>I apologize for the inconvenience :-)</h3></div>
+  <!-- <div id="h3Title"><h3>I apologize for the inconvenience :-)</h3></div> -->
 </div><!-- main -->
 
 
@@ -289,7 +346,7 @@
                 </a>
               </article>
               <article class="links col-xs-6">
-                <a href="https://facebook.com/triplexlink" target="_blank">
+                <a href="https://facebook.com/yyang0087" target="_blank">
                   <img class="icon" src="resources/facebook.png" alt="Icon">
                   <h4 class= "contact_title" >Facebook</h4>
                 </a>
@@ -305,6 +362,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="js/myscript.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
