--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <div class="about_text col-lg-6 col-md-6 fullheight" id="about_text_id">
               <h3>About me</h3>
-              <p>I'm an undergraduate student at the University of Wisconsin - Madison. I love to explore, tinker, and create. If I'm not doing school work, you can probably find me making videos, taking photos, or starting a new business.</p><br>
+              <p>I'm an undergraduate student at the University of Wisconsin - Madison and a software engineering intern at <a href="http://www.magix.com/us/" target="_blank">MAGIX</a> developing <a href="http://www.vegascreativesoftware.com/us/" target="_blank">VEGAS Pro</a>. I love to explore, tinker, and create. If I'm not doing school work, you can probably find me making videos, taking photos, or starting a new business.</p><br>
               <p>My interests involve AI, cryptography, IoT, cloud, mobile and web development. I'm most proficient in iOS and Java development but have intermediate knowledge in HTML, CSS, JS, and jQuery. I believe that all technology should be developed with the user or client in mind. When I work, I focus on beyond the functionality of the product by concentrating on the experience of the end user.
               </p><br>
               <p>At school, I'm a web developer for <a href="http://transcend.engineering/" target="_blank">Transcend Engineering</a>, a community that inspires entrepreneurship and innovation. I compete in a variety of business plan competitions, especially ones involving CS. On weekends, I try to travel as much as I could, such as going to Hackathons or visiting nearby cities.
@@ -145,61 +145,11 @@
     <div id="h2Title"><h2>PROJECTS</h2></div>
     <div id="h3Title"><h3>This section is currently under construction.</h3></div>
 
-    <div class="album text-muted">
-      <div class="container">
-
-        <div class="row">
-          <div class="card">
-            <a href="https://facebook.com/triplexlink" target="_blank">
-              <img data-src="holder.js/100px280/thumb" src="resources/globe.png" alt="Card image cap">
-            </a>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" src="resources/globe.png" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img data-src="holder.js/100px280/thumb" src="resources/globe.png" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-
-          <div class="card">
-            <img src="resources/globe.png" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img src="resources/globe.png" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img src="resources/globe.png" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-
-          <div class="card">
-            <img src="resources/globe.png" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img src="resources/globe.png" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card">
-            <img src="resources/globe.png" alt="Card image cap">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-        </div>
-
-      </div>
-    </div>
 
 
 
 
-
-
-
+<!--
 
     <div class="container" id="proj_cont">
       
@@ -254,7 +204,7 @@
 
 
 
-<!--
+
 
         <blockquote class="proj col-md-6 col-lg-3" id="ticketbuddy">
           <div class="quote">
