Update LinkedIn Link

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 </a>
               </article>
               <article class="links col-xs-6">
-                <a href="https://www.linkedin.com/in/yu-lin-yang-665923103" target="_blank">
+                <a href="https://www.linkedin.com/in/yyang0087" target="_blank">
                   <img class="icon" src="resources/linkedin.png" alt="Icon">
                   <h4 class= "contact_title" >LinkedIn</h4>
                 </a>
