--- a/index.html
+++ b/index.html
@@ -120,15 +120,20 @@
 
         <div class="about_text col-lg-6 col-md-6 fullheight" id="about_text_id">
               <h3>About me</h3>
-              <p>I'm an undergraduate student at the University of Wisconsin - Madison and a software engineering intern at <a href="http://www.magix.com/us/" target="_blank">MAGIX</a> developing <a href="http://www.vegascreativesoftware.com/us/" target="_blank">VEGAS Pro</a>. I love to explore, tinker, and create. If I'm not doing school work, you can probably find me making videos, taking photos, or starting a new business.</p><br>
-              <p>My interests involve AI, IoT, cloud, mobile and web development. My background is in iOS and Java development but have intermediate knowledge in HTML, CSS, JS, and jQuery. I'm also experienced in application level C++ and C#. I believe that all technology should be developed with the user or client in mind. When I work, I focus on beyond the functionality of the product by concentrating on the experience of the end user.
+              <p>My name is Yu-Lin Yang, and I'm the co-founder of HaulTalk, an online fashion e-commerce and video platform, and the President of <a href="http://transcenduw.com/" target="_blank">Transcend UW</a>, the largest student run innovation competition in the United States. I stumbled into the intersection of engineering and entrepreneurship by accident, but I found that I love not only building products that drive change, but also empowering other like-minded students to innovate.
               </p><br>
-              <p>At school, I'm the website product manager for <a href="http://transcend.engineering/" target="_blank">Transcend Engineering</a>, a community that inspires entrepreneurship and innovation. I lead a team of student engineers to maintain, iterate, and improve our student organization's website. I compete in a variety of business plan competitions, especially ones involving CS. On weekends, I travel as much as I could, from going to Hackathons to absorbing local culture.
+              <p><a href="http://www.haultalk.com" target="_blank">HaulTalk</a> is a fashion-focused, shoppable video content platform that provides an engaging communal experience and generates highly desirable trend data. We won the "Best Pitch Award" at the Transcend Madison Innovation Competition in April 2018.
               </p><br>
-              <p>On the side, I love photography and cinematography. As a <a href="https://www.youtube.com/user/SayW4Wumbo" target="_blank">freelancer</a>, I've made trailers, hype videos, and project videos for school, friends, and real clients. As a <a href="https://www.youtube.com/user/triplexlink" target=_"blank">hobby</a>, I've made videogame cinematics as well.
+              <p>I'm currently a data science intern at <a href="http://www.discover.com" target="_blank">Discover Financial Services</a>. Last summer, I was a software engineering intern at <a href="http://www.magix.com/us/" target="_blank">MAGIX</a>, which built <a href="http://www.vegascreativesoftware.com/us/" target="_blank">VEGAS PRO</a>, a multi-million-dollar video editing software. I built 4 features that are in the final version of the product which garnered a multitude of praise from our users.
               </p><br>
+              <p>At school, I'm the President of <a href="http://transcenduw.com/" target="_blank">Transcend UW</a>, a community that inspires entrepreneurship and innovation. I lead a diverse team of 11 ambitious individuals to inspire the Madison student community to create businesses and innovative ideas that will change the world.
+              </p><br>
+              <p>I also love photography and cinematography. As a <a href="https://www.youtube.com/user/SayW4Wumbo" target="_blank">freelancer</a>, I've made trailers, hype videos, and project videos for school, friends, and real clients. As a <a href="https://www.youtube.com/user/triplexlink" target=_"blank">hobby</a>, I've made videogame cinematics as well.
+              </p><br>
+              <!--
               <p>If you have an idea for something amazing, crazy, or straight up impossible and need an extra hand, hit me up and I'm more than eager to explore the unknown with you.
               </p><br>
+              -->
               <p><em>You can find my resume <a href="resources/Yu-Lin_Yang_Resume_2018.pdf" target="_blank">here.</a></em>
         </div> 
 
