--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="#featured">Home</a></li>
           <li><a href="#about">About Me</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <!-- <li><a href="#projects">Projects</a></li> -->
           <li><a href="#contact">Contact</a></li>
         </ul>        
       </div><!-- collapse navbar-collapse -->
@@ -143,13 +143,13 @@
   </div><!-- about page -->
 
 
-
+<!--
 
   <div class="page" id="projects">
     <div id="h2Title"><h2>PROJECTS</h2></div>
     <div id="h3Title"><h3>This section is currently under construction.</h3></div>
 
-
+-->
 
 
 
